force-app/main/default/objects/Lead/fields/ConvertedDate__c.field-meta.xml
<CustomField>
    <fullName>ConvertedDate__c</fullName>
    <label>Converted Date</label>
    <type>Date</type>
</CustomField>