force-app/main/default/objects/Lead/fields/Data_com_Lead__c.field-meta.xml
<CustomField>
    <fullName>Data_com_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this lead was generated from the Data.com Web-to-Lead form, and is used by workflow to change the lead to the Data.com Record Type.</description>
    <label>Data.com Lead</label>
    <type>Checkbox</type>
</CustomField>