force-app/main/default/objects/Lead/fields/mcsocsel11__AuthorId__c.field-meta.xml
<CustomField>
    <fullName>mcsocsel11__AuthorId__c</fullName>
    <description>An author id that is associated with a Post when using the Create Lead functionality in Social Intelligence Module.</description>
    <label>AuthorId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>