force-app/main/default/objects/Lead/fields/mcsocsel11__BlogPostId__c.field-meta.xml
<CustomField>
    <fullName>mcsocsel11__BlogPostId__c</fullName>
    <description>A blog post id that is associated with a Post when using the Create Lead functionality in Social Intelligence Module.</description>
    <label>BlogPostId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>