force-app/main/default/objects/Lead/fields/MSA_Data__c.field-meta.xml
<CustomField>
    <fullName>MSA_Data__c</fullName>
    <formula>ENCODED:{!ID:DandbCompany.FipsMsaDesc}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSA</label>
    <type>Text</type>
</CustomField>