force-app/main/default/objects/Lead/fields/NAICS_Code_Data__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_Data__c</fullName>
    <formula>ENCODED:{!ID:DandbCompany.PrimaryNaics}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS Code</label>
    <type>Text</type>
</CustomField>