force-app/main/default/objects/Lead/fields/NAICS_Description_Data__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Description_Data__c</fullName>
    <formula>ENCODED:{!ID:DandbCompany.PrimaryNaicsDesc}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS Description</label>
    <type>Text</type>
</CustomField>