force-app/main/default/objects/Lead/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Rating,
&quot;Hot&quot;, &quot;015bn0000019qQa&amp;oid=&quot;&amp;$Organization.Id,
&quot;Warm&quot;, &quot;015bn0000019qQb&amp;oid=&quot;&amp;$Organization.Id,
&quot;Cool&quot;, &quot;015bn0000019qQc&amp;oid=&quot;&amp;$Organization.Id,
&quot;015bn0000019qQc&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>