force-app/main/default/objects/Lead/fields/Reported_Create_Month_del__c.field-meta.xml
<CustomField>
    <fullName>Reported_Create_Month_del__c</fullName>
    <label>Reported Create Date</label>
    <type>Date</type>
</CustomField>