force-app/main/default/objects/Lead/fields/RoundRobin__c.field-meta.xml
<CustomField>
    <fullName>RoundRobin__c</fullName>
    <formula>CASE(MOD(VALUE( Lead_Number__c ),3),0,&quot;General Queue&quot;, 1, &quot;International Queue&quot;, 2, &quot;Target Campaign&quot;,&quot;Invalid ID&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Round Robin ID</label>
    <type>Text</type>
</CustomField>