force-app/main/default/objects/Lead/fields/SDO_Sales_Accepted__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>