force-app/main/default/objects/Lead/fields/SDO_Sales_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Approval_Status__c</fullName>
    <description>What: Approoval Status</description>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>