force-app/main/default/objects/Lead/fields/SDO_Sales_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Days_Remaining__c</fullName>
    <description>What: part of deal registration</description>
    <label>Days Remaining</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>