force-app/main/default/objects/Lead/fields/SDO_Sales_Project_Amount__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Project_Amount__c</fullName>
    <description>What: part of deal registration</description>
    <label>Project Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>