force-app/main/default/objects/Lead/fields/SDO_Sales_RatingColor__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_RatingColor__c</fullName>
    <description>What: Deal Registration</description>
    <formula>CASE(Rating, 
&quot;Hot&quot;, &quot;color:red&quot;, 
&quot;Warm&quot;, &quot;color:orange&quot;, 
&quot;Cold&quot;, &quot;color:blue&quot;, 
&quot;color:blue&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>