force-app/main/default/objects/Lead/fields/SDO_Sales_Registration_Expiration__c.field-meta.xml
<CustomField>
    <fullName>SDO_Sales_Registration_Expiration__c</fullName>
    <description>What: Used for deal registration</description>
    <label>Registration Expiration</label>
    <type>Date</type>
</CustomField>