force-app/main/default/objects/Lead/fields/SIC_Code_Data__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_Data__c</fullName>
    <formula>ENCODED:{!ID:DandbCompany.PrimarySic}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC Code</label>
    <type>Text</type>
</CustomField>