force-app/main/default/objects/Lead/fields/SIC_Description_Data__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description_Data__c</fullName>
    <formula>ENCODED:{!ID:DandbCompany.PrimarySicDesc}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC Description</label>
    <type>Text</type>
</CustomField>