force-app/main/default/objects/Lead/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( LeadSource, 
&quot;Website&quot;,&quot;015bn0000019qQd&amp;oid=&quot;&amp;$Organization.Id,
&quot;Social Media&quot;, &quot;015bn0000019qQe&amp;oid=&quot;&amp;$Organization.Id,
&quot;Marketing Event&quot;, &quot;015bn0000019qQf&amp;oid=&quot;&amp;$Organization.Id,
&quot;Referral&quot;,&quot;015bn0000019qQg&amp;oid=&quot;&amp;$Organization.Id,
&quot;Cold Call&quot;,&quot;015bn0000019qQh&amp;oid=&quot;&amp;$Organization.Id,
&quot;Data.com&quot;, &quot;015bn0000019qQi&amp;oid=&quot;&amp;$Organization.Id,
&quot;Community&quot;, &quot;015bn0000019qQj&amp;oid=&quot;&amp;$Organization.Id,
&quot;Inbound Call&quot;,&quot;015bn0000019qQk&amp;oid=&quot;&amp;$Organization.Id,
&quot;Partner&quot;,&quot;015bn0000019qQl&amp;oid=&quot;&amp;$Organization.Id,
&quot;015bn0000019qQd&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>