force-app/main/default/objects/Lead/listViews/SDO_All_Leads.listView-meta.xml
<ListView>
    <fullName>SDO_All_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Source__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All - Leads</label>
</ListView>