force-app/main/default/objects/Lead/listViews/SDO_Community_UnassignedPartnerLeads_Lead.listView-meta.xml
<ListView>
    <fullName>SDO_Community_UnassignedPartnerLeads_Lead</fullName>
    <columns>Priority__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>Source__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Partner - Unassigned Leads</label>
    <queue>SDO_Community_UnassignedPartnerLeads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>