force-app/main/default/objects/Lead/listViews/SDO_Marketiang_Qualified_Leads.listView-meta.xml
<ListView>
    <fullName>SDO_Marketiang_Qualified_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Marketing Qualified Leads</label>
    <queue>SDO_Marketing_Qualified_Leads</queue>
</ListView>