force-app/main/default/objects/Lead/listViews/SDO_My_Open_Registrations.listView-meta.xml
<ListView>
    <fullName>SDO_My_Open_Registrations</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>SDO_Sales_Approval_Status__c</columns>
    <columns>LEAD.EMAIL</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.SDO_Lead_DealRegistration</value>
    </filters>
    <filters>
        <field>SDO_Sales_Approval_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>My Open Registrations</label>
</ListView>