force-app/main/default/objects/Lead/listViews/SDO_Partner_Deal_Registrations.listView-meta.xml
<ListView>
    <fullName>SDO_Partner_Deal_Registrations</fullName>
    <columns>Priority__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.SDO_Lead_DealRegistration</value>
    </filters>
    <label>Partner - Deal Registrations</label>
</ListView>