force-app/main/default/objects/Lead/listViews/SDO_Partner_Leads_Assigned.listView-meta.xml
<ListView>
    <fullName>SDO_Partner_Leads_Assigned</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>Partner,Distributor,Reseller,Preston,Brown,Silver</value>
    </filters>
    <label>Partner - Assigned Leads</label>
</ListView>